# pomo2

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: my-element.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: channeltimer.rs  main.rs  typegen.rs
src/services/: macos-shortcuts.ts
