[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.139", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
chrono = "0.4.19"
crossbeam = "0.8.1"
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
serde_zod = { git = "https://github.com/shakyShane/serde-zod.git" }

[[bin]]
name = "typegen"
path = "src/typegen.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
